@@ -217,6 +217,8 @@ def api_printer(req):
     printer = prusa_link.printer
     storage_dict = printer.fs.storage_dict
     operational = printer.state in (State.IDLE, State.FINISHED, State.STOPPED)
+    printer_state = printer.state.value
+    link_state = "READY" if printer_state == "PREPARED" else printer_state
 
     space_info = storage_dict[LOCAL_STORAGE_NAME].get_space_info()
     free_space = space_info["free_space"]
@@ -251,7 +253,8 @@ def api_printer(req):
                     "closedOrError": False,
                     "finished": printer.state == State.FINISHED,
                     # Compatibility, PREPARED will be changed to READY
-                    "prepared": printer.ready
+                    "prepared": printer.ready,
+                    "link_state": link_state
                 }
             },
             "telemetry": {
